[metadata]
name = migration-test
description = A quick test package to check migration of large repositories between git providers
author = Ewan Wakeman
author-email = ewan.wakeman@nhs.net

[options]
packages = find:
include_package_data = True
setup_requires = setuptools_scm
package_dir =
    =src
install_requires =
    twine
    numpy
[options.entry_points]


[options.packages.find]
where = src
exclude =
    tests

[flake8]
ignore = E203 W503 W291 W293
max-line-length = 88
exclude =
    .tox
    dist
    .eggs
